// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavouriteMessagesHeader displays a search box after Search is clicked 1`] = `
<DocumentFragment>
  <div
    class="mx_FavMessagesHeader"
  >
    <div
      class="mx_FavMessagesHeader_Wrapper"
    >
      <div
        class="mx_FavMessagesHeader_Wrapper_left"
      >
        <span
          class="mx_BaseAvatar"
          role="presentation"
        >
          <span
            aria-hidden="true"
            class="mx_BaseAvatar_initial"
            style="font-size: 16.900000000000002px; width: 26px; line-height: 26px;"
          >
            F
          </span>
          <img
            alt=""
            aria-hidden="true"
            class="mx_BaseAvatar_image"
            data-testid="avatar-img"
            src="data:image/png;base64,00"
            style="width: 26px; height: 26px;"
          />
        </span>
        <span>
          Favourite Messages
        </span>
      </div>
      <div
        class="mx_FavMessagesHeader_Wrapper_right"
      >
        <input
          class="mx_FavMessagesHeader_Search"
          placeholder="Search..."
          type="text"
          value="foo"
        />
        <div
          aria-label="Cancel"
          class="mx_AccessibleButton mx_FavMessagesHeader_cancelButton"
          role="button"
          tabindex="0"
        />
        <div
          aria-label="Clear"
          class="mx_AccessibleButton mx_RoomHeader_button mx_FavMessagesHeader_clearAllButton"
          role="button"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FavouriteMessagesHeader displays a title and buttons 1`] = `
<DocumentFragment>
  <div
    class="mx_FavMessagesHeader"
  >
    <div
      class="mx_FavMessagesHeader_Wrapper"
    >
      <div
        class="mx_FavMessagesHeader_Wrapper_left"
      >
        <span
          class="mx_BaseAvatar"
          role="presentation"
        >
          <span
            aria-hidden="true"
            class="mx_BaseAvatar_initial"
            style="font-size: 16.900000000000002px; width: 26px; line-height: 26px;"
          >
            F
          </span>
          <img
            alt=""
            aria-hidden="true"
            class="mx_BaseAvatar_image"
            data-testid="avatar-img"
            src="data:image/png;base64,00"
            style="width: 26px; height: 26px;"
          />
        </span>
        <span>
          Favourite Messages
        </span>
      </div>
      <div
        class="mx_FavMessagesHeader_Wrapper_right"
      >
        <div
          aria-label="Search"
          class="mx_AccessibleButton mx_RoomHeader_button mx_RoomHeader_searchButton"
          role="button"
          tabindex="0"
        />
        <div
          aria-label="Clear"
          class="mx_AccessibleButton mx_RoomHeader_button mx_FavMessagesHeader_clearAllButton"
          role="button"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
